@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/man-pages
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-pages/ChangeLog,v 1.109 2008/06/17 12:02:59 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-pages/ChangeLog,v 1.110 2008/06/28 16:21:14 vapier Exp $
+
+*man-pages-3.01 (28 Jun 2008)
+
+  28 Jun 2008; Mike Frysinger <vapier@gentoo.org> +man-pages-3.01.ebuild:
+  Version bump.
 
   17 Jun 2008; Mike Frysinger <vapier@gentoo.org> man-pages-3.00.ebuild:
   Drag in split man-pages-posix package.
